# cuda-iaaras-cluster

./: CFT.h  CMakeLists.txt  a.out  abs_cuda_work.cu  broken_cuda.cu  clear_cuda.cu  code  code.cu  cuda_31_05.cu  cuda_code.cu  filter_fourier.txt  floats.txt  graph.py  main.cu  new_cuda.cu  old_version_cuda.cu  p.txt  phase.txt  phase_rotate.txt  qwe.txt  sample.cu  try_cuda.cu  types.h
infrastructure/: Makefile  launch.sh
infrastructure/src/: CFT_lib.c  CFT_lib.h  blocklist_lib.c  blocklist_lib.h  cluster.cfg  cluster_lib.c  cluster_lib.h  cluster_main.c  corr_main.c  ctldev_init.c  ctldev_main.c  fftw3_main.c  graph_before_end.txt  graph_before_freqdoubling1.txt  graph_before_freqdoubling2.txt  graph_before_lowpassfilter.txt  graph_before_phaserotation.txt  log_ctld.txt  log_r1.txt  log_r2.txt  log_r3.txt  plot_graphs.py  types.h
last_try/: cuda_code.cu  cuda_code.h  mcm_corr.c  new_cuda.cu
libraries/: cuda_code.h  types.h  zclog_lib.h
